tests/parser/errors/match.ray
match value {
    "value" print "oui"
}

match value
    "value" => print "oui"
}

match value {
    "value" => { print "oui" } "otherValue" => "error"
}

match value is {
    int: print "oui"
}

match value is {
    int print "oui"
}

match value {
    _ => 1
    0 => "other"
}

match value {
    0 => "other"
    _ => 1
    _ => 1
}

match value is {
    int: {
        0 => 0
